[gd_scene load_steps=49 format=2]

[ext_resource path="res://scenes/characters/Player.gd" type="Script" id=1]
[ext_resource path="res://addons/PixelAdventure/Main Characters/Ninja Frog/Idle (32x32).png" type="Texture" id=2]
[ext_resource path="res://addons/PixelAdventure/Main Characters/Ninja Frog/Run (32x32).png" type="Texture" id=3]
[ext_resource path="res://addons/PixelAdventure/Main Characters/Ninja Frog/Fall (32x32).png" type="Texture" id=4]
[ext_resource path="res://addons/PixelAdventure/Main Characters/Ninja Frog/Jump (32x32).png" type="Texture" id=5]
[ext_resource path="res://addons/PixelAdventure/Other/Dust Particle.png" type="Texture" id=6]
[ext_resource path="res://addons/PixelAdventure/Main Characters/Ninja Frog/Hit (32x32).png" type="Texture" id=7]

[sub_resource type="Gradient" id=28]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=29]
gradient = SubResource( 28 )

[sub_resource type="Curve" id=33]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.764045, 0.843182 ), -0.612285, -0.612285, 0, 0, Vector2( 1, 0.434091 ), -2.99731, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=34]
curve = SubResource( 33 )

[sub_resource type="ParticlesMaterial" id=27]
flag_disable_z = true
direction = Vector3( -1, -1, 0 )
spread = 30.0
gravity = Vector3( 0, 200, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 34 )
color_ramp = SubResource( 29 )

[sub_resource type="Curve" id=31]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.640449, 0.728409 ), -0.710421, -0.710421, 0, 0, Vector2( 1, 0.201136 ), -2.3028, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=32]
curve = SubResource( 31 )

[sub_resource type="ParticlesMaterial" id=30]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 400, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 39.53
scale_curve = SubResource( 32 )
color_ramp = SubResource( 29 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": false,
"name": "hit",
"speed": 20.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "run",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 8, 12 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 17
collision_mask = 3
script = ExtResource( 1 )

[node name="RunParticles" type="Particles2D" parent="."]
position = Vector2( 0, 16 )
amount = 2
lifetime = 0.3
explosiveness = 1.0
local_coords = false
process_material = SubResource( 27 )
texture = ExtResource( 6 )

[node name="JumpParticles" type="Particles2D" parent="."]
position = Vector2( 0, 16 )
emitting = false
amount = 5
lifetime = 0.5
one_shot = true
explosiveness = 1.0
fract_delta = false
local_coords = false
process_material = SubResource( 30 )
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 26 )

[node name="GroundRaycasts" type="Node2D" parent="."]
position = Vector2( 0, -1 )

[node name="RayCast2D" type="RayCast2D" parent="GroundRaycasts"]
position = Vector2( -8, 16 )
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="GroundRaycasts"]
position = Vector2( 8, 16 )
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="GroundRaycasts"]
position = Vector2( 0, 16 )
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="BounceRaycasts" type="Node2D" parent="."]
position = Vector2( 0, -1 )

[node name="RayCast2D" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( -8, 16 )
cast_to = Vector2( 0, 2 )
collision_mask = 4

[node name="RayCast2D2" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 8, 16 )
cast_to = Vector2( 0, 2 )
collision_mask = 4

[node name="RayCast2D3" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 0, 16 )
cast_to = Vector2( 0, 2 )
collision_mask = 4

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
